Lab_3_Part2/Lab3_Part2.cydsn/REBUILD.log
--------------- Rebuild Started: 10/25/2021 12:28:59 Project: Lab3_Part2, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\Lab3_Part2.cycdx"
Deleting file ".\Lab3_Part2.svd"
Deleting file ".\Lab3_Part2.rpt"
Deleting file ".\Lab3_Part2_timing.html"
cydsfit.exe -.appdatapath "C:\Users\SWAPNIL\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\SWAPNIL\Documents\PSoC Creator\Lab3_Part2\Lab3_Part2.cydsn\Lab3_Part2.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\SWAPNIL\Documents\PSoC Creator\Lab3_Part2\Lab3_Part2.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 7 pin(s) will be assigned a location by the fitter: \LCD_Char_1:LCDPort(0)\, \LCD_Char_1:LCDPort(1)\, \LCD_Char_1:LCDPort(2)\, \LCD_Char_1:LCDPort(3)\, \LCD_Char_1:LCDPort(4)\, \LCD_Char_1:LCDPort(5)\, \LCD_Char_1:LCDPort(6)\
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:40:18: error: 'P3' undeclared (first use in this function)
         aState = P3;
                  ^
main.c:40:18: note: each undeclared identifier is reported only once for each function it appears in
main.c:41:18: warning: implicit declaration of function 'P3_5_Read' [-Wimplicit-function-declaration]
         bState = P3_5_Read();
                  ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 10/25/2021 12:29:10 ---------------
